--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.h2.console.enabled=true
+spring.datasource.generate-unique-name=false
+spring.datasource.name=task
+#spring.datasource.url=jdbc:h2:mem:task
+#spring.datasource.driver-class-name=org.h2.Driver
 
+logging.level.org.springframework.jdbc=DEBUG
