--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
-spring.datasource.name=task
-#spring.datasource.url=jdbc:h2:mem:task
-#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
 
-logging.level.org.springframework.jdbc=DEBUG
+spring.sql.init.mode=always
