--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:47139/railway
 spring.datasource.username=postgres
-spring.datasource.password=$4Fa5bcd--24CC416aAB+*BB5GDe6*BGa
+spring.datasource.password=4Fa5bcd--24CC416aAB+*BB5GDe6*BGa
 
 spring.sql.init.mode=always
